--- a/main_ui.ui
+++ b/main_ui.ui
@@ -197,6 +197,19 @@
      </property>
     </widget>
    </widget>
+   <widget class="QPushButton" name="btn_model_arch">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>340</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Design model</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
