The code is edited to run on the  Ubuntu first you need to install: sudo apt-get install qtcreator pyqt5-dev-tools to be able to convet UI file to the python script

--- a/main_ui.ui
+++ b/main_ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1001</width>
-    <height>754</height>
+    <width>826</width>
+    <height>732</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>30</y>
-      <width>491</width>
+      <x>260</x>
+      <y>10</y>
+      <width>541</width>
       <height>651</height>
      </rect>
     </property>
@@ -29,20 +29,20 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>111</width>
+      <width>201</width>
       <height>281</height>
      </rect>
     </property>
     <property name="title">
      <string>Configuration</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>20</x>
        <y>20</y>
-       <width>81</width>
-       <height>61</height>
+       <width>115</width>
+       <height>62</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
@@ -95,7 +95,7 @@
       <rect>
        <x>0</x>
        <y>90</y>
-       <width>101</width>
+       <width>141</width>
        <height>101</height>
       </rect>
      </property>
@@ -107,8 +107,8 @@
        <rect>
         <x>20</x>
         <y>20</y>
-        <width>71</width>
-        <height>61</height>
+        <width>99</width>
+        <height>62</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -200,9 +200,9 @@
    <widget class="QPushButton" name="btn_model_arch">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>30</y>
-      <width>93</width>
+      <x>20</x>
+      <y>310</y>
+      <width>111</width>
       <height>28</height>
      </rect>
     </property>
@@ -213,9 +213,9 @@
    <widget class="QPushButton" name="btn_plot_imgs">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>80</y>
-      <width>93</width>
+      <x>20</x>
+      <y>340</y>
+      <width>111</width>
       <height>28</height>
      </rect>
     </property>
@@ -229,8 +229,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1001</width>
-     <height>26</height>
+     <width>826</width>
+     <height>22</height>
     </rect>
    </property>
   </widget>
