--- a/main_ui.ui
+++ b/main_ui.ui
@@ -36,12 +36,12 @@
     <property name="title">
      <string>Configuration</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>20</y>
-       <width>95</width>
+       <width>131</width>
        <height>65</height>
       </rect>
      </property>
@@ -323,8 +323,8 @@
      <rect>
       <x>30</x>
       <y>420</y>
-      <width>157</width>
-      <height>26</height>
+      <width>166</width>
+      <height>27</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -354,7 +354,7 @@
      <x>0</x>
      <y>0</y>
      <width>1390</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
